updated yaml structure
